# VRX-64-native

./: .gitignore  Cargo.toml  README.md
loading-slide/: Cargo.toml  manifest.json
shaders/: blit.wgsl  overlay.wgsl
src/: audio.rs  lib.rs  main.rs  slide_loader.rs  slide_manifest.rs
src/app/: mod.rs
src/assets/: archive.rs  loader.rs  manifest.rs  mod.rs
src/gpu/: context.rs  mod.rs
src/render/: mod.rs  overlay.rs  shader_contract.rs  slide.rs  transition.rs
src/server/: mod.rs  routes.rs
src/slide/: instance.rs
src/ui/: management.html  vite.config.ts
src/ui/management/: ManagementApp.tsx  legacy.ts  main.tsx  management.css
src/utils/: clock.rs  logging.rs  mod.rs
src/wasm/: mod.rs  runtime.rs
tests/: audio_integration.rs  smoke.rs
